--- a/job_verifier_project/requirements.txt
+++ b/job_verifier_project/requirements.txt
@@ -1,30 +1,44 @@
-# Django
+# =========================
+# Django (REQUIRED)
+# =========================
 django
 djangorestframework
 django-cors-headers
 gunicorn
 
-# ML / Deep Learning
-torch
-torchtext
-sentence-transformers
-scikit-learn
-joblib
-
-# NLP
-spacy
-nltk
-
-# Data
-pandas
-numpy
-
-# OCR
-pytesseract
-PyMuPDF
-Pillow
-
-Pillow
+# =========================
+# Environment variables
+# =========================
 python-dotenv
 
+# =========================
+# Image support (safe)
+# =========================
+Pillow
+pytesseract
 
+# =========================
+# ML / Deep Learning (DISABLED for Render Free)
+# =========================
+# torch
+# torchtext
+# sentence-transformers
+# scikit-learn
+# joblib
+
+# =========================
+# NLP (DISABLED)
+# =========================
+# spacy
+# nltk
+
+# =========================
+# Data processing (DISABLED)
+# =========================
+# pandas
+# numpy
+
+# =========================
+# OCR PDF (DISABLED – heavy)
+# =========================
+# PyMuPDF
